group 'org.liquidengine.legui'
version '1.0-SNAPSHOT'

subprojects {
    afterEvaluate {
        group 'org.liquidengine.legui'
        version '1.0-SNAPSHOT'

        repositories {
            mavenCentral()
            jcenter()
            maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
            maven { url "https://raw.githubusercontent.com/LiquidEngine/repo/snapshots" }
            maven { url "https://raw.githubusercontent.com/LiquidEngine/repo/releases" }
        }

        dependencies {
            // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
            compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
        }

        sourceCompatibility = 1.10

        compileJava {
            doFirst {
                options.compilerArgs = [
                        '--module-path', classpath.asPath,
                ]
                classpath = files()
            }
        }

        compileTestJava {
            inputs.property("moduleName", moduleName)
            doFirst {
                options.compilerArgs = [
                        '--module-path', classpath.asPath,
                        '--add-modules', 'junit',
                        '--add-reads', "$moduleName=junit",
                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
                ]
                classpath = files()
            }
        }

        test {
            inputs.property("moduleName", moduleName)
            doFirst {
                jvmArgs = [
                        '--module-path', classpath.asPath,
                        '--add-modules', 'ALL-MODULE-PATH',
                        '--add-reads', "$moduleName=junit",
                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
                ]
                classpath = files()
            }
        }
    }
}
